refactor: Ajout d'un nouveau message sur le site

--- a/templates/views/404.jinja
+++ b/templates/views/404.jinja
@@ -4,7 +4,7 @@
 <section id="error_page">
     <h1>Oups, la page demandé est introuvable !</h1>
     <p>Mais il semblerait que dans votre malheur, vous soyez tombé sur une famille de Tyranocif !</p>
-    <img src="/assets/404/tyranocif.gif" id="bestPokemonEver" alt="Tyranocif" />
+    <img src="/assets/404/tyranocif.gif" id="bestPokemonEver" alt="Tyranocif">
     <a href="{{ url_for('_home') }}">Retourner à la page d'accueil</a>
 </section>
 
@@ -12,12 +12,12 @@
     <h1 class="easter_text">❤ Tyranocif ❤</h1>
 
     <img src="/assets/logo.png" id="easter_pokeball" />
-    <img src="/assets/404/t1.gif" id="easter_t1-left"  loading="lazy" alt="Tyranocif" />
-    <img src="/assets/404/t1.gif" id="easter_t1-right" loading="lazy" alt="Tyranocif" />
-    <img src="/assets/404/t2.gif" id="easter_t2-left"  loading="lazy" alt="Tyranocif" />
-    <img src="/assets/404/t2.gif" id="easter_t2-right" loading="lazy" alt="Tyranocif" />
-    <img src="/assets/404/t3.gif" id="easter_t3-left"  loading="lazy" alt="Tyranocif" />
-    <img src="/assets/404/t3.gif" id="easter_t3-right" loading="lazy" alt="Tyranocif" />
+    <img src="/assets/404/t1.gif" id="easter_t1-left"  loading="lazy" alt="Tyranocif">
+    <img src="/assets/404/t1.gif" id="easter_t1-right" loading="lazy" alt="Tyranocif">
+    <img src="/assets/404/t2.gif" id="easter_t2-left"  loading="lazy" alt="Tyranocif">
+    <img src="/assets/404/t2.gif" id="easter_t2-right" loading="lazy" alt="Tyranocif">
+    <img src="/assets/404/t3.gif" id="easter_t3-left"  loading="lazy" alt="Tyranocif">
+    <img src="/assets/404/t3.gif" id="easter_t3-right" loading="lazy" alt="Tyranocif">
 </section>
 {% endblock %}
 
