refactor: Changement mot
Passage du mot "rebaptisée" en "renommée" et quelques fautes

--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -5,7 +5,7 @@
     <div class="question">
             <p class="warning__title">L'API se refait une beauté !</p>
             <p class="warning__description">
-                Pour plus de clarté, l'API a été rebaptisée Tyradex et elle est maintenant accessible via deux URL fonctionnelles : <a href="https://tyradex.vercel.app/">Tyradex.vercel.app</a> et <a href="https://tyradex.tech">Tyradex.tech</a>.
+                Pour plus de clarté, l'API a été renommée Tyradex et elle est désormais accessible via deux URLs fonctionnelles : <a href="https://tyradex.vercel.app/">Tyradex.vercel.app</a> et <a href="https://tyradex.tech">Tyradex.tech</a>.
             </p>
         </div>
     <div class="danger">
