--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -12,7 +12,7 @@
         <p class="warning__title">Une erreur ?</p>
         <p class="warning__description">
             L'API est encore récente, malgré la disponibilité d'une vaste quantité de données, il est possible que certaines d'entre elles soient inexactes.<br>
-            Si vous identifiez la moindre erreur, vous pouvez nous la signaler en <a href="https://github.com/Yarkis01/PokeAPI/issues/new?assignees=Yarkis01&labels=invalid+data&template=donn%C3%A9es-invalides.md&title=%5BDATA%5D" target="_blank">cliquant ici</a>.
+            Si vous identifiez la moindre erreur, vous pouvez nous la signaler en <a href="https://github.com/Yarkis01/TyraDex/issues/new?assignees=Yarkis01&labels=invalid+data&template=donn%C3%A9es-invalides.md&title=%5BDATA%5D" target="_blank">cliquant ici</a>.
         </p>
     </div>
 </section>
@@ -39,7 +39,7 @@
 
 <section id="routes-container">
     <div>
-        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/246/regular.png" loading="lazy" alt="Tyranocif">
+        <img src="https://raw.githubusercontent.com/Yarkis01/TyraDex/images/sprites/246/regular.png" loading="lazy" alt="Tyranocif">
         <p>
             <span>/api/v1/pokemon/&lt;identifiant&gt;</span><br><br>
             Permet de récupérer la fiche d'un Pokémon grâce à son identifiant dans le Pokédex National<br><br>
@@ -47,7 +47,7 @@
         </p>
     </div>
     <div>
-        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/58/regular_hisui.png" loading="lazy" alt="Caninos de Hisui">
+        <img src="https://raw.githubusercontent.com/Yarkis01/TyraDex/images/sprites/58/regular_hisui.png" loading="lazy" alt="Caninos de Hisui">
         <p>
             <span>/api/v1/pokemon/&lt;nom&gt;/&lt;region&gt;</span><br><br>
             Permet d'obtenir la forme régionale d'un Pokémon<br><br>
@@ -63,7 +63,7 @@
         </p>
     </div>
     <div>
-        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/909/regular.png" loading="lazy" alt="Chochodile">
+        <img src="https://raw.githubusercontent.com/Yarkis01/TyraDex/images/sprites/909/regular.png" loading="lazy" alt="Chochodile">
         <p>
             <span>/api/v1/gen/&lt;generation&gt;</span><br><br>
             Permet de récupérer la liste de tous les Pokémon d'une génération voulue<br><br>
@@ -74,8 +74,11 @@
 
 <section id="documentation-container">
     <h2>Envie d'aller plus loin ?</h2>
-    <p>Penser à aller voir la documentation pour voir toutes les fonctionnalités disponibles.</p>
-    <a href="/docs">Documentation</a>
+    <p>Pensez à consulter la documentation pour découvrir toutes les fonctionnalités disponibles ou consultez le Pokédex pour obtenir des informations complètes sur les Pokémon.</p>
+    <div>
+        <a href="/docs">Documentation</a>
+        <a href="/dex">Pokédex</a>
+    </div>
 </section>
 
 <section id="tryit-container">
