--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -30,11 +30,14 @@
                 </a>
             </div>
             <div>
+                <a href="/dex">
+                    <img src="/assets/pokedex.png" draggable="false" alt="" class="link_logo">
+                </a>
                 <a href="" target="_blank">
-                    <img src="/assets/discord.png" draggable="false" alt="Logo Discord" class="link_logo">
+                    <img src="/assets/discord.png" draggable="false" alt="" class="link_logo">
                 </a>
                 <a href="https://github.com/Yarkis01/TyraDex" target="_blank">
-                    <img src="/assets/github.png" draggable="false" alt="Logo github" class="link_logo">
+                    <img src="/assets/github.png" draggable="false" alt="" class="link_logo">
                 </a>
             </div>
         </header>
